# edl-gen

./: .gitignore  Cargo.toml  Cross.toml  Dockerfile-cross-old  Dockerfile.cross  LICENSE  README.md  build-windows.sh  build.rs  conveyor.conf  dist-build.sh  flake.nix  full-output.txt  mac-build-dist.sh  mac-build.sh  win-build-dist.sh  win-build.sh
.github/workflows/: ci.yml  release.yml
asio-sys/asiosdk_2.3.3/asio/: asio.opt
crates/cpal-mock/: Cargo.toml
crates/test-support/: Cargo.toml
crates/test-support/src/: lib.rs
nix/: build-cross.nix  build.nix  shell.nix
script/: build-mac-universal.sh  build-windows-cross.sh  bump-version-and-release.sh  bundle-build.sh  test-server-hang-full.sh
src/: cut_log.rs  edl.rs  frame_queue.rs  gui.rs  lib.rs  ltc.rs  ltc_decode.rs  main.rs  server.rs  single_val_channel.rs  state.rs  update_version.rs  usb.rs  web.rs
src/client/: interface.rs  mod.rs  update_version.rs
src/edl_writer/: deserialize_clip.rs  edit_queue.rs  frame_queue.rs  mod.rs
src/gui/: mod.rs  update_version.rs
src/ltc_decoder/: config.rs  mock_device.rs  mod.rs
src/server/: mod.rs  test.rs
src/test/: cpal_device.rs  mod.rs  state.rs
src/utils/: dirs.rs  mod.rs  single_val_channel.rs
