[package]
authors = ["Hank Jackson <hjackson277@gmail.com>"]
name = "edl-gen"
version = "0.1.5"
edition = "2021"
build = "build.rs"
readme = "README.md"
repository = "https://github.com/hankthetank27/edl-gen/"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
cpal = { git = "https://github.com/hankthetank27/cpal.git", rev = "40ed54d5941017ec1284a2e369a88db058ae7fde" }
dirs = "5.0.1"
eframe = "0.27.2"
font-kit = "0.14.2"
httparse = "1.8.0"
libloading = "0.8.6"
log = "0.4.21"
ltc = "0.2.0"
minreq = {version = "2.13.0", features = ["https", "json-using-serde"]}
num-traits = "0.2.19"
parking_lot = "0.12.3"
rfd = "0.14.1"
semver = "1.0.24"
serde = {version = "1.0.203", features = ["derive"]}
serde_json = "1.0.117"
sled = "0.34.7"
vtc = "0.1.13"

[target.'cfg(windows)'.dependencies]
cpal = { git = "https://github.com/hankthetank27/cpal.git", rev = "40ed54d5941017ec1284a2e369a88db058ae7fde", features = ["asio"] }

[dev-dependencies]
# egui_kittest = "0.30.0"
hound = "3.4"
itertools = "0.14.0"

# https://github.com/bitshifter/mathbench-rs/issues/35
# fixes nightly build
# [patch.crates-io]
# pathfinder_simd  = { git = "https://github.com/theoparis/pathfinder.git", rev = "05f19143e21a96027de7cf2d60fa47ecd8899d21", optional = true }
