[workspace]
members = ["crates/test-support"]

[workspace.package]
authors = ["Hank Jackson <hjackson277@gmail.com>"]
edition = "2021"
version = "0.1.6"

[package]
name = "edl-gen"
build = "build.rs"
readme = "README.md"
repository = "https://github.com/hankthetank27/edl-gen/"
license = "MIT"
authors.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0.86"
cpal = { git = "https://github.com/hankthetank27/cpal.git", rev = "40ed54d5941017ec1284a2e369a88db058ae7fde" }
dirs = "5.0.1"
eframe = "0.27.2"
font-kit = "0.14.2"
httparse = "1.8.0"
libloading = "0.8.6"
log = "0.4.21"
ltc = "0.2.0"
minreq = {version = "2.13.0", features = ["https", "json-using-serde"]}
num-traits = "0.2.19"
parking_lot = "0.12.3"
rfd = "0.14.1"
semver = "1.0.24"
serde = {version = "1.0.203", features = ["derive"]}
serde_json = "1.0.117"
sled = "0.34.7"
vtc = "0.1.13"

[target.'cfg(windows)'.dependencies]
cpal = { git = "https://github.com/hankthetank27/cpal.git", rev = "40ed54d5941017ec1284a2e369a88db058ae7fde", features = ["asio"] }

[dev-dependencies]
test_support = { path = "crates/test-support"}

# https://github.com/bitshifter/mathbench-rs/issues/35
# fixes nightly build
# [patch.crates-io]
# pathfinder_simd  = { git = "https://github.com/theoparis/pathfinder.git", rev = "05f19143e21a96027de7cf2d60fa47ecd8899d21", optional = true }
